# MSTC-RA-324

./: .gitignore  README.md  run.sh
UR_10FrontEnd/: README  coordinates.csv  index.html  main.js  package-lock.json  package.json  styles.css
dummy_pointcloud_publisher/: package.xml  setup.cfg  setup.py
dummy_pointcloud_publisher/dummy_pointcloud_publisher/: dummy_publisher.py
known_object_handler/: package.xml  setup.cfg  setup.py
known_object_handler/known_object_handler/: object_publisher_node.py  waypoint_manager_node.py
known_object_handler/known_object_handler/waypoint_tests/: test_application_waypoint_workflow.py  test_internal_waypoint_manager.py  test_stress_waypoint_manager.py  test_unit_clear_service.py
known_object_handler/launch/: publish_known_object.launch.py
robot_perception/: package.xml  setup.py
robot_perception/launch/: object_snapshot.launch.py  perception.launch.py
robot_perception/robot_perception/: object_processor_node.py  object_snapshot_node.py  test_object_snapshot_integration.py  test_object_snapshot_launch.py  test_object_snapshot_node.launch.py  test_object_snapshot_unit.py
robot_perception/robot_perception/initial_test_scripts/v0_test_scripts/: test_object_snapshot_node.py
robot_perception/robot_perception/initial_test_scripts/v1_v2_test_scripts/: v1_v2_integration_test.py  v1_v2_unit_test.py
robot_perception/rviz/: snapshot_config.rviz
trajectory_executor/: CMakeLists.txt  package.xml
trajectory_executor/launch/: trajectory_executor.launch.py
trajectory_executor/src/: robot_trajectory_executor.cpp
ur10_custom_description/: CMakeLists.txt  package.xml
ur10_custom_description/launch/: view_robot.launch.py
ur10_custom_description/urdf/: ur10_custom.urdf.xacro  ur10_custom_generated.urdf
ur10_custom_description/urdf/tools/: gas_manifold.urdf.xacro  welding_tool.urdf.xacro  zed_camera.urdf.xacro
ur10_waypoint_follower/: package.xml  setup.cfg  setup.py  test_scene_publisher.py
ur10_waypoint_follower/config/: physical_parameters.yaml  visual_parameters.yaml
ur10_waypoint_follower/launch/: waypoint.launch.py
ur10_waypoint_follower/resource/: waypoints.csv
ur10_waypoint_follower/ur10_waypoint_follower/: coordinator_node.py
ur10_waypoint_follower/urdf/: ur.urdf.xacro
