<?xml version="1.0"?>
<package format="3">
  <name>trajectory_executor</name>
  <version>0.0.1</version>
  <description>Executes MoveIt Cartesian trajectories from PoseArray waypoints.</description>
  <maintainer email="olmosbryant@outlook.com">jetson</maintainer>
  <license>TODO: License declaration-do</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>

  <depend>pilz_industrial_motion_planner</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
