<?xml version="1.0"?>
<package format="3">
  <name>ur10_waypoint_follower</name>
  <version>0.0.1</version>
  <description>UR10 Waypoint Follower using a coordinator node</description>
  <maintainer email="dumbdumb@email.com"> CSE-324</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>tf2_ros</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
